tdf#148629 - Disable demote command on non-list paragraphs

Change-Id: I04fe77233539ecaa614eed3e28d4243e41392432
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205158
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>